libstdc++-v3/testsuite/tr1/6_containers/unordered/instantiate/multimap.cc
@@ -2,7 +2,7 @@
 
 // 2005-02-17  Matt Austern  <austern@apple.com>
 //
-// Copyright (C) 2005 Free Software Foundation, Inc.
+// Copyright (C) 2005, 2006 Free Software Foundation, Inc.
 //
 // This file is part of the GNU ISO C++ Library.  This library is free
 // software; you can redistribute it and/or modify it under the
@@ -32,3 +32,6 @@ template class unordered_multimap<string, float>;
 template class unordered_multimap<string, float,
 				  hash<string>, equal_to<string>, 
 				  allocator<pair<const string, float> >, true>;
+template class unordered_multimap<string, float,
+				  hash<string>, equal_to<string>, 
+				  allocator<char>, false>;
